--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EjemploApi">
+        <activity
+            android:name=".Principal"
+            android:exported="false"
+            android:label="@string/title_activity_principal"
+            android:theme="@style/Theme.EjemploApi" />
+        <activity
+            android:name=".Registro"
+            android:exported="false"
+            android:label="@string/title_activity_registro"
+            android:theme="@style/Theme.EjemploApi" />
+        <activity
+            android:name=".LoginFirebase"
+            android:exported="false"
+            android:label="@string/title_activity_login_firebase"
+            android:theme="@style/Theme.EjemploApi" />
+        <activity
+            android:name=".FormularioLogin"
+            android:exported="false"
+            android:label="@string/title_activity_formulario_login"
+            android:theme="@style/Theme.EjemploApi" />
+        <activity
+            android:name=".DatosDelPokemon"
+            android:exported="false"
+            android:label="@string/title_activity_datos_del_pokemon"
+            android:theme="@style/Theme.EjemploApi" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
