--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EjemploApi">
         <activity
-            android:name=".Principal"
+            android:name=".screens.PantallaLogin"
+            android:exported="false"
+            android:label="@string/title_activity_pantalla_login"
+            android:theme="@style/Theme.EjemploApi" />
+        <activity
+            android:name=".ui.screens.Principal"
             android:exported="false"
             android:label="@string/title_activity_principal"
             android:theme="@style/Theme.EjemploApi" />
         <activity
-            android:name=".Registro"
+            android:name=".ui.screens.Registro"
             android:exported="false"
             android:label="@string/title_activity_registro"
             android:theme="@style/Theme.EjemploApi" />
         <activity
-            android:name=".LoginFirebase"
+            android:name=".ui.screens.LoginFirebase"
             android:exported="false"
             android:label="@string/title_activity_login_firebase"
             android:theme="@style/Theme.EjemploApi" />
@@ -34,7 +39,7 @@
             android:label="@string/title_activity_formulario_login"
             android:theme="@style/Theme.EjemploApi" />
         <activity
-            android:name=".DatosDelPokemon"
+            android:name=".ui.screens.DatosDelPokemon"
             android:exported="false"
             android:label="@string/title_activity_datos_del_pokemon"
             android:theme="@style/Theme.EjemploApi" />
