--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+# Firebase (Ignorar configuración sensible)
+google-services.json
+app/google-services.json
+**/google-services.json
